# furi

./: .env-example  .gitignore  Cargo.toml  LICENSE  README.md  clickhouse-config.xml  config-example.toml  docker-compose.yml  nginx.conf  schema.sql
analytics/: Cargo.toml  README.md  config-example.toml  populate_analytics.sh
analytics/src/: config.rs  main.rs  state.rs
analytics/src/api/: handlers.rs  mod.rs  response.rs  router.rs
analytics/src/infrastructure/: repository.rs
analytics/src/infrastructure/migrations/: 01-database.sql  02-analytics-consumer.sql  03-analytics-raw.sql  04-analytics-mv.sql  05-analytics-1min.sql  06-analytics-1min-mv.sql  07-analytics-1hour.sql  08-analytics-1hour-mv.sql  09-analytics-1d.sql  10-analytics-1d-mv.sql
assets/: diagram.drawio
certs/: README.md
frontend/: .env-example  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  main.ts  style.css
frontend/src/components/charts/: LineChart.vue  PieChart.vue
frontend/src/components/core/: AnalyticsSearch.vue  FooterComponent.vue  NotifyComponent.vue  ShortInput.vue  ShortenedUrls.vue
frontend/src/router/: router.ts
frontend/src/services/: api.ts
frontend/src/stores/: urlStore.ts
frontend/src/views/: Analytics.vue  AnalyticsPage.vue  Home.vue  HomePage.vue
furi/: Cargo.toml  Dockerfile  README.md  config-example.toml
furi/geoip/: README.md
furi/src/: config.rs  main.rs  state.rs
furi/src/api/: handlers.rs  response.rs  router.rs
furi/src/infrastructure/: mod.rs  redpanda.rs  repository.rs  timescale.rs
furi/src/infrastructure/migrations/: schema.sql
furi_analytics/: Cargo.toml  Dockerfile  config-example.toml  populate_analytics.sh
furi_analytics/src/: config.rs  lib.rs  main.rs  state.rs
furi_analytics/src/api/: handlers.rs  response.rs  router.rs
furi_analytics/src/infrastructure/: repository.rs
furi_analytics/src/infrastructure/migrations/: 01-timescale-setup.sql  02-device-type-function.sql  03-continuous-aggregates.sql  04-refresh-policies.sql
furi_web/: Dockerfile  index.html  package-lock.json  package.json
furi_web/src/: App.vue  main.ts  style.css
furi_web/src/services/: api.ts
furi_web/src/stores/: notifyStore.ts  urlStore.ts
furi_web/src/utils/: countries.ts
furi_web/src/views/: AnalyticsPage.vue  HomePage.vue  NotFoundPage.vue
src/: config.rs  handlers.rs  main.rs  repository.rs
src/migration/: schema.sql
web-server/: README.md  config.yaml
web-server/loadbalancer/: go.mod  main.go
(+13 files in other folders)
