[package]
name = "furi"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "=0.7.5"
tokio = { version = "1.37.0", features = ["full"]}
serde = { version = "1.0.201", features = ["derive"]}
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tower-http = { version = "0.5.2", features = ["trace"]}
