[package]
name = "furi"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "=0.7.5"
tokio = { version = "1.37.0", features = ["full"]}
serde = { version = "1.0.201", features = ["derive"]}
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tower-http = { version = "0.5.2", features = ["trace", "cors"]}
bb8 = "0.8.3"
bb8-redis = "0.15.0"
redis = "0.25.3"
url = "2.5.0"
rand = "0.8.5"
tokio-postgres = "0.7.10"
bb8-postgres = "0.8.1"
toml = "0.8.12"
