[package]
name = "furi_analytics"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "=0.7.5"
tokio = { version = "1.42", features = ["full"] }
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.9"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tower-http = { version = "0.5.2", features = ["trace", "cors"] }
toml = "0.8.12"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono"] }
chrono = { version = "0.4.38", features = ["serde"] }
